# std_module

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cmake/: StdModuleMacros.cmake  std_module-config.cmake.in
docker/: Dockerfile  README.md
docs/: AST_ANALYSIS_PLAN.md  AST_POC_RESULTS.md
scripts/: README.md  ast_poc.py  clang_ast_dump_parser.py  debug_ast.py  symbol_coverage.py  validate_exports.py  validate_with_ast_dump.py
src/: CMakeLists.txt  algorithm.cppm  any.cppm  array.cppm  atomic.cppm  barrier.cppm  bit.cppm  bitset.cppm  charconv.cppm  chrono.cppm  codecvt.cppm  compare.cppm  complex.cppm  concepts.cppm  condition_variable.cppm  coroutine.cppm  deque.cppm  exception.cppm  execution.cppm  filesystem.cppm  format.cppm  forward_list.cppm  fstream.cppm  functional.cppm  future.cppm  initializer_list.cppm  iomanip.cppm  ios.cppm  iosfwd.cppm  iostream.cppm  istream.cppm  iterator.cppm  latch.cppm  limits.cppm  list.cppm  locale.cppm  map.cppm  memory.cppm  memory_resource.cppm  mutex.cppm  (+35 more)
test/: .gitignore  CMakeLists.txt  README.md  build_manual.sh  test_algorithm.cpp  test_any.cpp  test_array.cpp  test_atomic.cpp  test_barrier.cpp  test_bit.cpp  test_bitset.cpp  test_charconv.cpp  test_chrono.cpp  test_codecvt.cpp  test_compare.cpp  test_complex.cpp  test_concepts.cpp  test_condition_variable.cpp  test_coroutine.cpp  test_deque.cpp  test_exception.cpp  test_execution.cpp  test_filesystem.cpp  test_format.cpp  test_forward_list.cpp  test_framework.cppm  test_fstream.cpp  test_functional.cpp  test_future.cpp  test_initializer_list.cpp  test_iomanip.cpp  test_ios.cpp  test_iosfwd.cpp  test_iostream.cpp  test_istream.cpp  test_iterator.cpp  test_latch.cpp  test_limits.cpp  test_list.cpp  test_locale.cpp  (+38 more)
